--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "ajv": "^8.6.3",
     "ajv-formats": "^2.1.1",
     "ajv-keywords": "^5.1.0",
+    "appmetrics-dash": "^5.3.0",
     "axios": "^0.25.0",
     "axios-retry": "^3.2.3",
     "basic-auth": "^2.0.1",
